# jupyter-outlier-detection

./: README.md  main.py  pyproject.toml
dosc/: jupyter_notebook.md  z-score.md
jupyter/: charts.ipynb  ipynb2py.py  pyplot.ipynb
jupyter/boosting/: XGBoost.ipynb
jupyter/outliers/: z_score.ipynb
jupyter/outliers/test_dummy/: ttst.ipynb
jupyter/smoothing/: simple_exp_smoothing.ipynb
src/boosting/: XGBoost.py
src/charts/: chart.py
src/error_metrics/: error_metrics.py
src/imputation/: knn_imputer.py
src/outliers/: isolationforest.py  outlier_prophet.py  z_score.py
src/outliers/legacy/: outlier_process.py
src/outliers/test_dummy/: ttst.py
src/smoothing/: holt_linear_trend.py  holtwinters.py  simple_exp_smoothing.py
